--- a/platforms/android/CordovaLib/.project
+++ b/platforms/android/CordovaLib/.project
@@ -1,1 +1,1 @@
-<?xml version="1.0" encoding="UTF-8"?><projectDescription><name>FarmPerfect-CordovaLib</name></projectDescription>
+<?xml version="1.0" encoding="UTF-8"?><projectDescription><name>rooT-CordovaLib</name></projectDescription>
